--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+git+https://github.com/huggingface/transformers
 openai
-requests==2.28.2
+requests
 gradio
-Pillow==9.3.0
-cloudinary==1.32.0
-pymongo==4.3.3
-numpy==1.24.2
-torch==2.0.0
+Pillow
+cloudinary
+pymongo
+numpy
+torch
 diffusers
 accelerate
 transformers
 gpt3-tokenizer
 wikipedia
+langchain
+gradio-tools
