--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,5 @@
 Interacting_with_CLIP.ipynb
 07-hugging-face-for-skills.ipynb
+audiocraft-demo.ipynb
+Transformers_can_do_anything.ipynb
 env.example
