--- a/env.example
+++ b/env.example
@@ -1,3 +1,8 @@
+## Mandatory
+P_MONGODB_URI=""
+P_MONGODB_DATABASE=""
+
+## Optional
 OPENAI_API_KEY=""
 OPENAI_ORG_ID=""
 CLOUDINARY_CLOUD_NAME=""
@@ -6,5 +11,6 @@ CLOUDINARY_API_SECRET=""
 CLOUDINARY_FOLDER=""
 MONGODB_URI=""
 MONGODB_DATABASE=""
-MONGODB_COLLECTION=""
 STABILITY_API_KEY=""
+RAPIDAPI_KEY=""
+USE_MONGODB_CONFIG=""
