--- a/readthedocs/mkdocs.yml
+++ b/readthedocs/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: AI
 site_url: https://ai.amitpuri.com
 site_description: 'AI for making a better tomorrow!'
 site_author: 'Amit Puri'
-docs_dir: docs/
+docs_dir: readthedocs/
 nav:
    Home - : index.md
 theme: readthedocs
