--- a/env.example
+++ b/env.example
@@ -14,3 +14,8 @@ MONGODB_DATABASE=""
 STABILITY_API_KEY=""
 RAPIDAPI_KEY=""
 USE_MONGODB_CONFIG=""
+OPENAI_API_VERSION="2020-11-07"
+AZURE_OPENAI_KEY=""
+AZURE_OPENAI_ENDPOINT=""
+AZURE_OPENAI_DEPLOYMENT_NAME=""
+GOOGLE_PALM_AI_API_KEY=""
