--- a/env.example
+++ b/env.example
@@ -18,4 +18,4 @@ OPENAI_API_VERSION="2020-11-07"
 AZURE_OPENAI_KEY=""
 AZURE_OPENAI_ENDPOINT=""
 AZURE_OPENAI_DEPLOYMENT_NAME=""
-GOOGLE_PALM_AI_API_KEY=""
+LANGUAGE_MODEL_API_KEY=""
