--- a/env.example
+++ b/env.example
@@ -2,22 +2,34 @@
 P_MONGODB_URI=""
 P_MONGODB_DATABASE=""
 
-## Optional
+## Optional keys
+
+## Open AI
 OPENAI_API_KEY=""
 OPENAI_ORG_ID=""
+
+## Cloudnary
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 CLOUDINARY_FOLDER=""
+
+## MongoDB
 MONGODB_URI=""
 MONGODB_DATABASE=""
-STABILITY_API_KEY=""
-RAPIDAPI_KEY=""
 USE_MONGODB_CONFIG=""
+
+## Azure OpenAI Service
 OPENAI_API_VERSION="2020-11-07"
 AZURE_OPENAI_KEY=""
 AZURE_OPENAI_ENDPOINT=""
 AZURE_OPENAI_DEPLOYMENT_NAME=""
+
+## Google PaLM API Key
 LANGUAGE_MODEL_API_KEY=""
+
+## Others
+STABILITY_API_KEY=""
 ASSEMBLYAI_API_KEY=""
 ELEVEN_API_KEY=""
+RAPIDAPI_KEY=""
