--- a/env.example
+++ b/env.example
@@ -21,9 +21,11 @@ USE_MONGODB_CONFIG=""
 
 ## Azure OpenAI Service
 OPENAI_API_VERSION="2020-11-07"
-AZURE_OPENAI_KEY=""
+AZURE_OPENAI_API_KEY=""
 AZURE_OPENAI_ENDPOINT=""
 AZURE_OPENAI_DEPLOYMENT_NAME=""
+OPENAI_API_KEY=""
+OPENAI_ORG_ID=""
 
 ## Google PaLM API Key
 LANGUAGE_MODEL_API_KEY=""
