--- a/env.example
+++ b/env.example
@@ -24,11 +24,11 @@ OPENAI_API_VERSION="2020-11-07"
 AZURE_OPENAI_API_KEY=""
 AZURE_OPENAI_ENDPOINT=""
 AZURE_OPENAI_DEPLOYMENT_NAME=""
-OPENAI_API_KEY=""
-OPENAI_ORG_ID=""
 
 ## Google PaLM API Key
 LANGUAGE_MODEL_API_KEY=""
+GOOGLE_APPLICATION_CREDENTIALS=""
+GCP_PROJECT_ID=""
 
 ## Others
 STABILITY_API_KEY=""
